# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import householdsRouter from "./households";
+import storagesRouter from "./storages";
+import itemsRouter from "./items";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(householdsRouter);
+router.use(storagesRouter);
+router.use(itemsRouter);
 
 export default router;
